Fix Gutenberg align full and align wide classes

--- a/css/src/_wordpress.scss
+++ b/css/src/_wordpress.scss
@@ -284,17 +284,35 @@ $align-breakpoint: 1000px;
 	}
 }
 
-@media only screen and (min-width: 768px) {
-	.full-width-content .alignfull {
+.full-width-content {
+
+	.alignfull {
+		// Page content may be at a mobile width.
+		max-width: 100vw;
 		margin: {
-			left: calc(50% - 50vw);
-			right: calc(50% - 50vw);
+			left: -.62rem - $grid-margin-gutters;
+			right: -.62rem - $grid-margin-gutters;
 		}
-		width: auto;
-		max-width: 1000%;
+
+		@include breakpoint(medium) {
+			// Page content may be at a desktop width.
+			margin: {
+				left: -$grid-margin-gutters - .94rem;
+				right: -$grid-margin-gutters - .94rem;
+			}
+		}
+
+		@include breakpoint(xlarge) {
+			// Page content is at its maximum width.
+			margin: {
+				left: calc(50% - 50vw);
+				right: calc(50% - 50vw);
+			}
+			width: 100vw;
+		}
 	}
 
-	.full-width-content .alignwide {
+	.alignwide {
 		margin: {
 			left: calc(25% - 25vw);
 			right: calc(25% - 25vw);
@@ -303,10 +321,12 @@ $align-breakpoint: 1000px;
 		max-width: 1000%;
 	}
 
-	.alignwide img,
-	.alignfull img {
-		display: block;
-		margin: 0 auto;
+	.alignwide,
+	.alignfull {
+		img {
+			display: block;
+			margin: 0 auto;
+		}
 	}
 }
 
